--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: any
+  shared_preferences: any
 
 
   # The following adds the Cupertino Icons font to your application.
